--- a/scaleway/testdata/instance-ip-basic.cassette.yaml
+++ b/scaleway/testdata/instance-ip-basic.cassette.yaml
@@ -2,32 +2,32 @@
 version: 1
 interactions:
 - request:
-    body: '{"project":"9af7216e-7b97-404d-8ada-9f379eb39ae5"}'
+    body: '{"project":"105bdce1-64c0-48ab-899d-868455867ecf"}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips
     method: POST
   response:
-    body: '{"ip": {"id": "ad0df0b0-6145-4cf2-9944-23e5353d81d0", "address": "212.47.234.122",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "255"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:45 GMT
+      - Tue, 07 Dec 2021 10:50:45 GMT
       Location:
-      - https://par1-cmp-prd-api02.internal.scaleway.com/ips/ad0df0b0-6145-4cf2-9944-23e5353d81d0
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -37,7 +37,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ad17e2cb-7e77-4158-9110-d5fb421265f4
+      - 11575af2-142f-4f5e-bfac-20e8c3fa777e
     status: 201 Created
     code: 201
     duration: ""
@@ -46,24 +46,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/ad0df0b0-6145-4cf2-9944-23e5353d81d0
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: GET
   response:
-    body: '{"ip": {"id": "ad0df0b0-6145-4cf2-9944-23e5353d81d0", "address": "212.47.234.122",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "255"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:45 GMT
+      - Tue, 07 Dec 2021 10:50:45 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -73,37 +73,37 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 21844e5a-8f96-449e-a4d2-f815852f40db
+      - 106ae460-a6cb-47c7-a83c-dc7770c90005
     status: 200 OK
     code: 200
     duration: ""
 - request:
-    body: '{"project":"9af7216e-7b97-404d-8ada-9f379eb39ae5"}'
+    body: '{"project":"105bdce1-64c0-48ab-899d-868455867ecf"}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips
     method: POST
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:46 GMT
       Location:
-      - https://par1-cmp-prd-api01.internal.scaleway.com/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -113,7 +113,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - d8955d18-d39a-4654-9c9c-625b59dc8afa
+      - b49abd70-969b-4cdd-9dc8-9c0f589cfdc1
     status: 201 Created
     code: 201
     duration: ""
@@ -122,24 +122,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - cb2e1d1e-0c28-4440-938c-0c442bc79916
+      - 542ccbcd-1e5f-4297-9ed2-82e144c8e168
     status: 200 OK
     code: 200
     duration: ""
@@ -158,24 +158,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -185,7 +185,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 6de773de-bb2b-4a4c-97ed-242565017d45
+      - 7cd60d97-9e80-4b9f-80cb-88596baa908f
     status: 200 OK
     code: 200
     duration: ""
@@ -194,24 +194,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/ad0df0b0-6145-4cf2-9944-23e5353d81d0
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: GET
   response:
-    body: '{"ip": {"id": "ad0df0b0-6145-4cf2-9944-23e5353d81d0", "address": "212.47.234.122",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "255"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -221,7 +221,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 4e8acc4c-e641-4b75-9519-5c499c46b95c
+      - e66a4d1f-0b64-4d26-ba59-72f82b5b43a0
     status: 200 OK
     code: 200
     duration: ""
@@ -230,24 +230,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -257,7 +257,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 3ed902cb-51d4-40c0-b279-79c6ea14407b
+      - 9f66dbf4-ded8-47c2-b6df-0697ff93ff6c
     status: 200 OK
     code: 200
     duration: ""
@@ -266,24 +266,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/ad0df0b0-6145-4cf2-9944-23e5353d81d0
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: GET
   response:
-    body: '{"ip": {"id": "ad0df0b0-6145-4cf2-9944-23e5353d81d0", "address": "212.47.234.122",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "255"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -293,7 +293,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 00b0ca7a-0244-41bc-96fb-797839d7931b
+      - a02d4625-b49e-4a1b-9a23-ee5a1a97841f
     status: 200 OK
     code: 200
     duration: ""
@@ -302,19 +302,17 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: DELETE
   response:
     body: ""
     headers:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
       Date:
-      - Tue, 11 May 2021 14:53:47 GMT
+      - Tue, 07 Dec 2021 10:50:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -324,7 +322,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f8b1d21f-35b6-4126-9eb0-79592d0391b0
+      - be984d21-9b6a-49e4-90aa-7c1ff5569ef2
     status: 204 No Content
     code: 204
     duration: ""
@@ -333,19 +331,17 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/ad0df0b0-6145-4cf2-9944-23e5353d81d0
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: DELETE
   response:
     body: ""
     headers:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -355,7 +351,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 4c985a21-74e9-4d24-8965-1358bb58039f
+      - 9ee83fd2-221e-4097-b866-67a4c2b0b905
     status: 204 No Content
     code: 204
     duration: ""
@@ -364,9 +360,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
     body: '{"type": "authorization_required", "message": "Authorization required"}'
@@ -378,7 +374,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -388,7 +384,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - efe193ff-d2c0-4247-ab4c-1799c67fc910
+      - 6b9bceed-f709-4520-8b3e-d18ecc28ce02
     status: 403 Forbidden
     code: 403
     duration: ""
@@ -397,9 +393,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/ad0df0b0-6145-4cf2-9944-23e5353d81d0
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: GET
   response:
     body: '{"type": "authorization_required", "message": "Authorization required"}'
@@ -411,7 +407,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:53:46 GMT
+      - Tue, 07 Dec 2021 10:50:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -421,7 +417,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 3ca71e9b-71c0-43e2-a01e-15e14fc15d47
+      - 4df9d050-c821-433f-9b86-c6734de38699
     status: 403 Forbidden
     code: 403
     duration: ""
