--- a/scaleway/testdata/instance-volume-different-name-generated.cassette.yaml
+++ b/scaleway/testdata/instance-volume-different-name-generated.cassette.yaml
@@ -2,33 +2,33 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-affectionate-newton","project":"9af7216e-7b97-404d-8ada-9f379eb39ae5","volume_type":"l_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-nice-keller","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "acf39363-11be-44cb-b1ae-7a7975704b1b", "name": "tf-vol-affectionate-newton",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-11T14:15:04.669423+00:00", "modification_date":
-      "2021-05-11T14:15:04.669423+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
+      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "436"
+      - "428"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:15:04 GMT
+      - Tue, 07 Dec 2021 10:50:03 GMT
       Location:
-      - https://par1-cmp-prd-api02.internal.scaleway.com/volumes/acf39363-11be-44cb-b1ae-7a7975704b1b
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 6afe0e3b-b8a4-4282-87c6-e5139801da98
+      - 9f7ae172-bcc1-4dbe-889b-08b9644ed1ed
     status: 201 Created
     code: 201
     duration: ""
@@ -47,25 +47,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/acf39363-11be-44cb-b1ae-7a7975704b1b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
     method: GET
   response:
-    body: '{"volume": {"id": "acf39363-11be-44cb-b1ae-7a7975704b1b", "name": "tf-vol-affectionate-newton",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-11T14:15:04.669423+00:00", "modification_date":
-      "2021-05-11T14:15:04.669423+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
+      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "436"
+      - "428"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:15:04 GMT
+      - Tue, 07 Dec 2021 10:50:03 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a25a1f95-0e99-4afb-845c-52e828e47df1
+      - da8918c9-ca2f-4b78-b97c-3d54e4cfad3b
     status: 200 OK
     code: 200
     duration: ""
@@ -84,25 +84,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/acf39363-11be-44cb-b1ae-7a7975704b1b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
     method: GET
   response:
-    body: '{"volume": {"id": "acf39363-11be-44cb-b1ae-7a7975704b1b", "name": "tf-vol-affectionate-newton",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-11T14:15:04.669423+00:00", "modification_date":
-      "2021-05-11T14:15:04.669423+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
+      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "436"
+      - "428"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:15:04 GMT
+      - Tue, 07 Dec 2021 10:50:04 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 7da388da-96ba-4158-a0eb-bb0dc4a3c862
+      - 025c1129-b5de-4f85-bef6-97e1ff48bb4a
     status: 200 OK
     code: 200
     duration: ""
@@ -121,25 +121,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/acf39363-11be-44cb-b1ae-7a7975704b1b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
     method: GET
   response:
-    body: '{"volume": {"id": "acf39363-11be-44cb-b1ae-7a7975704b1b", "name": "tf-vol-affectionate-newton",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-11T14:15:04.669423+00:00", "modification_date":
-      "2021-05-11T14:15:04.669423+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
+      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "436"
+      - "428"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:15:04 GMT
+      - Tue, 07 Dec 2021 10:50:04 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 0ffce237-5605-42fc-9d19-c04f63f2d599
+      - f5dc8365-0217-4a17-9ee1-7aa9bd0642d5
     status: 200 OK
     code: 200
     duration: ""
@@ -158,25 +158,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/acf39363-11be-44cb-b1ae-7a7975704b1b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
     method: GET
   response:
-    body: '{"volume": {"id": "acf39363-11be-44cb-b1ae-7a7975704b1b", "name": "tf-vol-affectionate-newton",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-11T14:15:04.669423+00:00", "modification_date":
-      "2021-05-11T14:15:04.669423+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
+      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "436"
+      - "428"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:15:05 GMT
+      - Tue, 07 Dec 2021 10:50:05 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 682d7ff4-9018-481c-9b30-af52525871d7
+      - 801e96e1-0614-4880-8dde-cd8ffc92bd81
     status: 200 OK
     code: 200
     duration: ""
@@ -195,25 +195,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/acf39363-11be-44cb-b1ae-7a7975704b1b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
     method: GET
   response:
-    body: '{"volume": {"id": "acf39363-11be-44cb-b1ae-7a7975704b1b", "name": "tf-vol-affectionate-newton",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-11T14:15:04.669423+00:00", "modification_date":
-      "2021-05-11T14:15:04.669423+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
+      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "436"
+      - "428"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:15:05 GMT
+      - Tue, 07 Dec 2021 10:50:06 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -223,7 +223,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 51d1cd46-af2d-4b5d-8fdf-77c20299c775
+      - b78137ad-d08e-499d-83cc-087bbe3daacb
     status: 200 OK
     code: 200
     duration: ""
@@ -232,19 +232,17 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/acf39363-11be-44cb-b1ae-7a7975704b1b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
     method: DELETE
   response:
     body: ""
     headers:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
       Date:
-      - Tue, 11 May 2021 14:15:05 GMT
+      - Tue, 07 Dec 2021 10:50:06 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -254,7 +252,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 1a00812d-2b24-4df6-9a2f-083d0a2a5f7e
+      - eb42f870-ab7e-4903-98a9-6859c79edb3d
     status: 204 No Content
     code: 204
     duration: ""
@@ -263,12 +261,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/acf39363-11be-44cb-b1ae-7a7975704b1b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''acf39363-11be-44cb-b1ae-7a7975704b1b''
+    body: '{"type": "unknown_resource", "message": "Volume ''6c20d2c8-b8c4-4505-9b86-546ec324ed4c''
       not found."}'
     headers:
       Content-Length:
@@ -278,7 +276,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 14:15:05 GMT
+      - Tue, 07 Dec 2021 10:50:06 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -288,7 +286,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 25c76909-beae-4785-9f08-9d48f0d9be1c
+      - 1fd7ff3b-4e9c-421a-a0cb-be19913a817a
     status: 404 Not Found
     code: 404
     duration: ""
