--- a/scaleway/testdata/instance-ip-with-zone.cassette.yaml
+++ b/scaleway/testdata/instance-ip-with-zone.cassette.yaml
@@ -2,32 +2,32 @@
 version: 1
 interactions:
 - request:
-    body: '{"project":"9af7216e-7b97-404d-8ada-9f379eb39ae5"}'
+    body: '{"project":"105bdce1-64c0-48ab-899d-868455867ecf"}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips
     method: POST
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:37 GMT
+      - Tue, 07 Dec 2021 10:50:49 GMT
       Location:
-      - https://par1-cmp-prd-api02.internal.scaleway.com/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -37,7 +37,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - d3cca5e7-5784-4df2-b77e-b97ba4591b9e
+      - 9ba3e9a4-26eb-419c-8684-e0c0f19325d1
     status: 201 Created
     code: 201
     duration: ""
@@ -46,24 +46,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: GET
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:37 GMT
+      - Tue, 07 Dec 2021 10:50:49 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -73,7 +73,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a147ecee-070d-4308-8b2a-3ad8b164242f
+      - 99b9f8e4-3a5f-4a77-b951-7fa0ce2eda98
     status: 200 OK
     code: 200
     duration: ""
@@ -82,24 +82,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: GET
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:37 GMT
+      - Tue, 07 Dec 2021 10:50:49 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -109,7 +109,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9b6780ff-abf1-4bab-96da-66a0ea268098
+      - 0fa96493-71f5-4755-8b23-097294fae480
     status: 200 OK
     code: 200
     duration: ""
@@ -118,24 +118,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: GET
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:37 GMT
+      - Tue, 07 Dec 2021 10:50:49 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -145,7 +145,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 617b99b9-497c-4fb4-975d-bd4d9eb2777f
+      - 5edaa6e2-4a18-401e-b0f3-212666199f8e
     status: 200 OK
     code: 200
     duration: ""
@@ -154,24 +154,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: GET
   response:
-    body: '{"ip": {"id": "3cee8725-837b-4b5e-b1fd-2570ecc533c3", "address": "51.158.66.98",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "fr-par-1", "tags":
+    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "254"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:38 GMT
+      - Tue, 07 Dec 2021 10:50:50 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -181,7 +181,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ed6327dc-4026-4c6e-866d-9e29afad6c04
+      - e76fd037-ef42-4eb2-a5b1-a414a99ef70b
     status: 200 OK
     code: 200
     duration: ""
@@ -190,19 +190,17 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/3cee8725-837b-4b5e-b1fd-2570ecc533c3
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
     method: DELETE
   response:
     body: ""
     headers:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
       Date:
-      - Tue, 11 May 2021 15:30:38 GMT
+      - Tue, 07 Dec 2021 10:50:50 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -212,37 +210,37 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 59ae87cd-a3a0-435f-9eae-e06377a4f4b9
+      - 9d743f2a-6b01-482c-a75c-48d26cf90464
     status: 204 No Content
     code: 204
     duration: ""
 - request:
-    body: '{"project":"9af7216e-7b97-404d-8ada-9f379eb39ae5"}'
+    body: '{"project":"105bdce1-64c0-48ab-899d-868455867ecf"}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips
     method: POST
   response:
-    body: '{"ip": {"id": "31b7de69-f2fd-4bd4-90a9-8b3911e41bf8", "address": "51.15.37.130",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "nl-ams-1", "tags":
+    body: '{"ip": {"id": "22a0117c-d033-44fc-85dc-9c0c11bae1ef", "address": "51.15.113.6",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "nl-ams-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "252"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:38 GMT
+      - Tue, 07 Dec 2021 10:50:51 GMT
       Location:
-      - https://ams1-cp-prd-api02.internal.scaleway.com/ips/31b7de69-f2fd-4bd4-90a9-8b3911e41bf8
+      - https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -252,7 +250,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f2f0d772-600f-4bf8-90f2-32c535db95fd
+      - b42f1dd8-2f56-45b6-ad94-3dd3bfb25b3e
     status: 201 Created
     code: 201
     duration: ""
@@ -261,24 +259,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/31b7de69-f2fd-4bd4-90a9-8b3911e41bf8
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
     method: GET
   response:
-    body: '{"ip": {"id": "31b7de69-f2fd-4bd4-90a9-8b3911e41bf8", "address": "51.15.37.130",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "nl-ams-1", "tags":
+    body: '{"ip": {"id": "22a0117c-d033-44fc-85dc-9c0c11bae1ef", "address": "51.15.113.6",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "nl-ams-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "252"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:38 GMT
+      - Tue, 07 Dec 2021 10:50:51 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -288,7 +286,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 405b7397-b57b-4188-85b7-92125e0e8c66
+      - 4b06ba07-9d1e-4cc6-9fc5-22b6a495dcaa
     status: 200 OK
     code: 200
     duration: ""
@@ -297,24 +295,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/31b7de69-f2fd-4bd4-90a9-8b3911e41bf8
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
     method: GET
   response:
-    body: '{"ip": {"id": "31b7de69-f2fd-4bd4-90a9-8b3911e41bf8", "address": "51.15.37.130",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "nl-ams-1", "tags":
+    body: '{"ip": {"id": "22a0117c-d033-44fc-85dc-9c0c11bae1ef", "address": "51.15.113.6",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "nl-ams-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "252"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:38 GMT
+      - Tue, 07 Dec 2021 10:50:51 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -324,7 +322,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 7375615e-05e5-4042-91b4-c3f26a663e48
+      - 4021a487-a26b-4ab2-8c35-fd4a10e892e0
     status: 200 OK
     code: 200
     duration: ""
@@ -333,24 +331,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/31b7de69-f2fd-4bd4-90a9-8b3911e41bf8
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
     method: GET
   response:
-    body: '{"ip": {"id": "31b7de69-f2fd-4bd4-90a9-8b3911e41bf8", "address": "51.15.37.130",
-      "reverse": null, "server": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "zone": "nl-ams-1", "tags":
+    body: '{"ip": {"id": "22a0117c-d033-44fc-85dc-9c0c11bae1ef", "address": "51.15.113.6",
+      "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "nl-ams-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "253"
+      - "252"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:38 GMT
+      - Tue, 07 Dec 2021 10:50:52 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -360,7 +358,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 01ea4ca0-5e2f-49b5-a4d8-6781fff27f03
+      - f5ff0415-999f-421b-9e97-bf0c33ff6ca7
     status: 200 OK
     code: 200
     duration: ""
@@ -369,19 +367,17 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/31b7de69-f2fd-4bd4-90a9-8b3911e41bf8
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
     method: DELETE
   response:
     body: ""
     headers:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
       Date:
-      - Tue, 11 May 2021 15:30:39 GMT
+      - Tue, 07 Dec 2021 10:50:52 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -391,7 +387,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9934804b-0e2c-4a84-a94e-75fe808c6bbc
+      - 18f11d84-64e4-4854-9010-fb5c48fb0054
     status: 204 No Content
     code: 204
     duration: ""
@@ -400,9 +396,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/31b7de69-f2fd-4bd4-90a9-8b3911e41bf8
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
     method: GET
   response:
     body: '{"type": "authorization_required", "message": "Authorization required"}'
@@ -414,7 +410,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 11 May 2021 15:30:39 GMT
+      - Tue, 07 Dec 2021 10:50:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -424,7 +420,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 8263465c-4f99-46bc-8955-f9531e5e3957
+      - 3103c566-da51-4825-80de-5336f58cef14
     status: 403 Forbidden
     code: 403
     duration: ""
