--- a/scaleway/testdata/instance-volume-cannot-resize-block-down.cassette.yaml
+++ b/scaleway/testdata/instance-volume-cannot-resize-block-down.cassette.yaml
@@ -2,33 +2,33 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-elegant-dewdney","project":"951df375-e094-4d26-97c1-ba548eeb9c42","volume_type":"b_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-infallible-dirac","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"b_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.7; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "6286e8b4-6641-446a-8ea5-6ade7664b863", "name": "tf-vol-elegant-dewdney",
-      "volume_type": "b_ssd", "export_uri": null, "organization": "951df375-e094-4d26-97c1-ba548eeb9c42",
-      "project": "951df375-e094-4d26-97c1-ba548eeb9c42", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-02-15T11:33:33.486335+00:00", "modification_date":
-      "2021-02-15T11:33:33.486335+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+      "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
+      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "432"
+      - "433"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 11:33:33 GMT
+      - Tue, 07 Dec 2021 10:50:21 GMT
       Location:
-      - https://par1-cmp-prd-api01.internal.scaleway.com/volumes/6286e8b4-6641-446a-8ea5-6ade7664b863
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2d78ca56-b228-4dad-9d2a-6034fbd8ce39
+      - baa56785-c0eb-4ade-acc3-020ec9d83696
     status: 201 Created
     code: 201
     duration: ""
@@ -47,25 +47,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.7; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6286e8b4-6641-446a-8ea5-6ade7664b863
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
     method: GET
   response:
-    body: '{"volume": {"id": "6286e8b4-6641-446a-8ea5-6ade7664b863", "name": "tf-vol-elegant-dewdney",
-      "volume_type": "b_ssd", "export_uri": null, "organization": "951df375-e094-4d26-97c1-ba548eeb9c42",
-      "project": "951df375-e094-4d26-97c1-ba548eeb9c42", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-02-15T11:33:33.486335+00:00", "modification_date":
-      "2021-02-15T11:33:33.486335+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+      "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
+      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "432"
+      - "433"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 11:33:33 GMT
+      - Tue, 07 Dec 2021 10:50:21 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b2c4c8fc-c15e-4f6a-861e-fba0a87571d3
+      - 4a87649f-c02c-4b97-b2a3-cf8b0bd7987e
     status: 200 OK
     code: 200
     duration: ""
@@ -84,25 +84,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.7; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6286e8b4-6641-446a-8ea5-6ade7664b863
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
     method: GET
   response:
-    body: '{"volume": {"id": "6286e8b4-6641-446a-8ea5-6ade7664b863", "name": "tf-vol-elegant-dewdney",
-      "volume_type": "b_ssd", "export_uri": null, "organization": "951df375-e094-4d26-97c1-ba548eeb9c42",
-      "project": "951df375-e094-4d26-97c1-ba548eeb9c42", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-02-15T11:33:33.486335+00:00", "modification_date":
-      "2021-02-15T11:33:33.486335+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+      "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
+      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "432"
+      - "433"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 11:33:34 GMT
+      - Tue, 07 Dec 2021 10:50:22 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 564bc69c-a5d2-4f58-b646-601aeae334a0
+      - a92f8c69-5e89-4983-9b96-c05ad4191e89
     status: 200 OK
     code: 200
     duration: ""
@@ -121,25 +121,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.7; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6286e8b4-6641-446a-8ea5-6ade7664b863
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
     method: GET
   response:
-    body: '{"volume": {"id": "6286e8b4-6641-446a-8ea5-6ade7664b863", "name": "tf-vol-elegant-dewdney",
-      "volume_type": "b_ssd", "export_uri": null, "organization": "951df375-e094-4d26-97c1-ba548eeb9c42",
-      "project": "951df375-e094-4d26-97c1-ba548eeb9c42", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-02-15T11:33:33.486335+00:00", "modification_date":
-      "2021-02-15T11:33:33.486335+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+      "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
+      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "432"
+      - "433"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 11:33:35 GMT
+      - Tue, 07 Dec 2021 10:50:22 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ca0768d8-1295-4615-b385-1d420877f588
+      - 3a2bdcec-1c86-469b-bce9-98474c41c75f
     status: 200 OK
     code: 200
     duration: ""
@@ -158,25 +158,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.7; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6286e8b4-6641-446a-8ea5-6ade7664b863
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
     method: GET
   response:
-    body: '{"volume": {"id": "6286e8b4-6641-446a-8ea5-6ade7664b863", "name": "tf-vol-elegant-dewdney",
-      "volume_type": "b_ssd", "export_uri": null, "organization": "951df375-e094-4d26-97c1-ba548eeb9c42",
-      "project": "951df375-e094-4d26-97c1-ba548eeb9c42", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-02-15T11:33:33.486335+00:00", "modification_date":
-      "2021-02-15T11:33:33.486335+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+      "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
+      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "432"
+      - "433"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 11:33:35 GMT
+      - Tue, 07 Dec 2021 10:50:23 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 44a41308-8b04-4256-b7d0-b3918f134276
+      - 35b546f4-3695-4ae5-821a-54f02c230f73
     status: 200 OK
     code: 200
     duration: ""
@@ -195,19 +195,17 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.7; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6286e8b4-6641-446a-8ea5-6ade7664b863
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
     method: DELETE
   response:
     body: ""
     headers:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
       Date:
-      - Mon, 15 Feb 2021 11:33:35 GMT
+      - Tue, 07 Dec 2021 10:50:23 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -217,7 +215,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 85c85e3b-d552-4b43-b9a5-aad1bbd0b698
+      - abb28bfc-37c3-407e-baa3-3104ab7ba512
     status: 204 No Content
     code: 204
     duration: ""
@@ -226,12 +224,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.7; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6286e8b4-6641-446a-8ea5-6ade7664b863
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''6286e8b4-6641-446a-8ea5-6ade7664b863''
+    body: '{"type": "unknown_resource", "message": "Volume ''92d7432b-afb0-4a2d-9584-5a917a61c6a7''
       not found."}'
     headers:
       Content-Length:
@@ -241,7 +239,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 11:33:36 GMT
+      - Tue, 07 Dec 2021 10:50:23 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -251,7 +249,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - e8501d5b-74b4-4782-ab29-6219b991c6cf
+      - b34e4331-789b-4183-832d-635c3a4824e8
     status: 404 Not Found
     code: 404
     duration: ""
