--- a/scaleway/testdata/instance-volume-resize-not-block.cassette.yaml
+++ b/scaleway/testdata/instance-volume-resize-not-block.cassette.yaml
@@ -2,33 +2,33 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-vigorous-tesla","project":"9af7216e-7b97-404d-8ada-9f379eb39ae5","volume_type":"l_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-dreamy-tereshkova","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "505e5cc6-fbef-4e97-8cca-eca215935353", "name": "tf-vol-vigorous-tesla",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-12T18:23:21.222474+00:00", "modification_date":
-      "2021-05-12T18:23:21.222474+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 18:23:21 GMT
+      - Tue, 07 Dec 2021 10:50:18 GMT
       Location:
-      - https://par1-cmp-prd-api02.internal.scaleway.com/volumes/505e5cc6-fbef-4e97-8cca-eca215935353
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - af015fe4-0779-4fd2-b072-2e4cd06c87d0
+      - 953bb8fd-eb68-4798-a2a2-bf92079f253f
     status: 201 Created
     code: 201
     duration: ""
@@ -47,25 +47,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/505e5cc6-fbef-4e97-8cca-eca215935353
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "505e5cc6-fbef-4e97-8cca-eca215935353", "name": "tf-vol-vigorous-tesla",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-12T18:23:21.222474+00:00", "modification_date":
-      "2021-05-12T18:23:21.222474+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 18:23:21 GMT
+      - Tue, 07 Dec 2021 10:50:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 0d310684-8679-4720-b2a8-91a701406380
+      - 15b7c020-2aa8-4123-9a1e-5627f22f225c
     status: 200 OK
     code: 200
     duration: ""
@@ -84,25 +84,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/505e5cc6-fbef-4e97-8cca-eca215935353
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "505e5cc6-fbef-4e97-8cca-eca215935353", "name": "tf-vol-vigorous-tesla",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-12T18:23:21.222474+00:00", "modification_date":
-      "2021-05-12T18:23:21.222474+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 18:23:21 GMT
+      - Tue, 07 Dec 2021 10:50:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 65241385-3733-4f80-a91d-f567fd23f83a
+      - 171c0bd0-0bf3-4bde-ae27-9d7244c68c1e
     status: 200 OK
     code: 200
     duration: ""
@@ -121,25 +121,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/505e5cc6-fbef-4e97-8cca-eca215935353
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "505e5cc6-fbef-4e97-8cca-eca215935353", "name": "tf-vol-vigorous-tesla",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-12T18:23:21.222474+00:00", "modification_date":
-      "2021-05-12T18:23:21.222474+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 18:23:21 GMT
+      - Tue, 07 Dec 2021 10:50:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 529c0e0e-33cd-4a01-ad3a-618ad28b2e89
+      - fe70082e-0077-4b7b-ab81-47d7f05e9633
     status: 200 OK
     code: 200
     duration: ""
@@ -158,25 +158,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/505e5cc6-fbef-4e97-8cca-eca215935353
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "505e5cc6-fbef-4e97-8cca-eca215935353", "name": "tf-vol-vigorous-tesla",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-12T18:23:21.222474+00:00", "modification_date":
-      "2021-05-12T18:23:21.222474+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 18:23:21 GMT
+      - Tue, 07 Dec 2021 10:50:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - dac6bbce-ea08-40f2-a9fe-bbab422abe5a
+      - d9f26676-412c-48c0-a96b-5621e84280eb
     status: 200 OK
     code: 200
     duration: ""
@@ -195,25 +195,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/505e5cc6-fbef-4e97-8cca-eca215935353
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "505e5cc6-fbef-4e97-8cca-eca215935353", "name": "tf-vol-vigorous-tesla",
-      "volume_type": "l_ssd", "export_uri": null, "organization": "9af7216e-7b97-404d-8ada-9f379eb39ae5",
-      "project": "9af7216e-7b97-404d-8ada-9f379eb39ae5", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-05-12T18:23:21.222474+00:00", "modification_date":
-      "2021-05-12T18:23:21.222474+00:00", "zone": "fr-par-1"}}'
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 18:23:21 GMT
+      - Tue, 07 Dec 2021 10:50:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -223,7 +223,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 0e71324b-fac1-4046-8b6f-720e9922dd88
+      - ac7b70bf-4b13-4379-92a8-7a73e6da2d30
     status: 200 OK
     code: 200
     duration: ""
@@ -232,19 +232,17 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/505e5cc6-fbef-4e97-8cca-eca215935353
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: DELETE
   response:
     body: ""
     headers:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
       Date:
-      - Wed, 12 May 2021 18:23:22 GMT
+      - Tue, 07 Dec 2021 10:50:20 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -254,7 +252,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a8793117-4c70-4be3-aa23-8047b656acb9
+      - 2799a927-e357-42f9-918e-e117ad291079
     status: 204 No Content
     code: 204
     duration: ""
@@ -263,12 +261,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/505e5cc6-fbef-4e97-8cca-eca215935353
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''505e5cc6-fbef-4e97-8cca-eca215935353''
+    body: '{"type": "unknown_resource", "message": "Volume ''8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7''
       not found."}'
     headers:
       Content-Length:
@@ -278,7 +276,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 18:23:22 GMT
+      - Tue, 07 Dec 2021 10:50:20 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -288,7 +286,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - e0d5e551-16d0-403c-98fa-ad1f04e7b639
+      - 508e60be-2142-413d-87d8-15fc14d269ab
     status: 404 Not Found
     code: 404
     duration: ""
